<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xberry_test</name>
  <version>0.0.0</version>
  <description>A ROS2 package for demonstrating custom services and sensor interfaces</description>
  <maintainer email="adam.krawczyk@robotec.ai">Adam Krawczyk</maintainer>
  <license>Apache 2.0</license> <!-- Replace with your actual license, if not Apache 2.0 -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Dependencies for message and service generation -->
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Linters for code quality -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
